Se termina html y css del proyecto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav class="menu">
             <ul>
-                <li id="Inicio"><a href="index.php">Inicio</a></li>
+                <li id="Inicio"><a href="index.html">Inicio</a></li>
             </ul>
         </nav>
     </header>
@@ -59,7 +59,7 @@
         <div class="content-three">
             <div class="content-module">
                 <img src="images/ciber.jpg">
-                <h1>Tu seguridad esta con nosotros.</h1>
+                <h1 style="margin-top: 30px">Tu seguridad esta con nosotros.</h1>
                 <img src="images/escudo1.png">
                 <img src="images/ipn1.png">
                 <img src="images/upiita1.png">
@@ -68,19 +68,19 @@
 
         <div class="content-for">
             <div class="content-item3">
-                <h4>TITULO</h4>
+                <!-- <h4>TITULO</h4>
                 <p>En "INGRESE NOMBRE DEL PRODUCTO.txt" tenemos el compromiso con la sociedad de salvaguardar la integridad fisica de las personas que usen 	nuestros dispositivos.
                    Siempre innovando con las mejores tecnologias al alcance de tus manos.
-                </p>
+                </p> -->
             </div>
 
-		<h4>ACTIVAR</h4>
-        <div class="form-group">
+		<h4 style="text-align: center">ACTIVAR</h4>
+        <div class="form-group" style="text-align: center">
 			<label for="name">CURP:</label>
 			<input id="curp" class="form-control required" name="name" type="text">
 		</div><br>
 
-			<button id="guardar" type="submit" class="btn-danger btn-lg btn-block" name="submit" style="padding-left: 98px;dding-right: 98px;border-left-width: 1px;border-left-style: solid;">Enviar</button>
+			<button id="guardar" type="submit" class="btn-danger btn-lg btn-block" name="submit" >Enviar</button>
 
             <div class="content-five">
                 <div class="content-item4">
