Se modifica el html y el main js para que reciba más parámetros y se puedan subir a la BD de Firebase

--- a/index.html
+++ b/index.html
@@ -74,10 +74,18 @@
                 </p> -->
             </div>
 
-		<h4 style="text-align: center">ACTIVAR</h4>
+		<h4 style="text-align: center">REGISTRAR</h4>
         <div class="form-group" style="text-align: center">
-			<label for="name">CURP:</label>
-			<input id="curp" class="form-control required" name="name" type="text">
+			<label for="name">Nombre:</label>
+			<input id="nombre" class="form-control required" name="name" type="text"><br><br>
+            <label for="age">Edad:</label>
+            <input id="edad" class="form-control required" name="age" type="text"><br><br>
+            <label for="address">Domicilio:</label>
+            <input id="domicilio" class="form-control required" name="address" type="text"><br><br>
+            <label for="blood">Tipo de sangre:</label>
+            <input id="sangre" class="form-control required" name="gender" type="text"><br><br>
+            <label for="gender">Género:</label>
+            <input id="genero" class="form-control required" name="gender" type="text">
 		</div><br>
 
 			<button id="guardar" type="submit" class="btn-danger btn-lg btn-block" name="submit" >Enviar</button>
