Se creó el registro aparte para subirse a la Base de Datos

--- a/index.html
+++ b/index.html
@@ -70,33 +70,14 @@
 
         <div class="content-for">
             <div class="content-item3">
-                <!-- <h4>TITULO</h4>
-                <p>En "INGRESE NOMBRE DEL PRODUCTO.txt" tenemos el compromiso con la sociedad de salvaguardar la integridad fisica de las personas que usen 	nuestros dispositivos.
-                   Siempre innovando con las mejores tecnologias al alcance de tus manos.
-                </p> -->
             </div>
 
-		<h4 style="text-align: center">REGISTRAR</h4>
-        <div class="form-group" style="text-align: center">
-			<label for="name">Nombre:</label>
-			<input id="nombre" class="form-control required" name="name" type="text"><br><br>
-            <label for="age">Edad:</label>
-            <input id="edad" class="form-control required" name="age" type="text"><br><br>
-            <label for="address">Domicilio:</label>
-            <input id="domicilio" class="form-control required" name="address" type="text"><br><br>
-            <label for="blood">Tipo de sangre:</label>
-            <input id="sangre" class="form-control required" name="gender" type="text"><br><br>
-            <label for="gender">Género:</label>
-            <input id="genero" class="form-control required" name="gender" type="text">
-		</div><br>
-
-			<button id="guardar" type="submit" class="btn-danger btn-lg btn-block" name="submit" >Enviar</button>
-
+		
             <div class="content-five">
                 <div class="content-item4">
                     <h4>CONTACTO</h4>
                     <p>Tel: 5589784558<br>Tangamandapio, Calle Canela No. 54 
-                    <br><br>Developed by:<br>Franco Peza Miguel, Gutiérrez Martínez Esteban
+                    <br><br><b>Developed by:</b><br>Franco Peza Miguel, Gutiérrez Martínez Esteban
                 	<br>Trejo Miranda Miguel, Paez Ortega Oswaldo, Vazquez Cruz Rodrigo</p>
                 </div>
             </div>
